--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "@types/node": "^20.11.25",
     "@types/react-dom": "^18.2.21",
     "standard": "^17.1.0",
     "typescript": "^5.2.2",
